Updateing some oa issues